Bug 1284177 - P1: Provide observable notification for video suspend. r=jwwang

To support mochitests, report change in video decode suspend state via
events mozentervideosuspend/mozexitvideosuspend.

MozReview-Commit-ID: EwMduLzcMVg