dom/media/MediaDecoderStateMachine.cpp
@@ -1328,8 +1328,8 @@ void MediaDecoderStateMachine::VisibilityChanged()
 {
   MOZ_ASSERT(OnTaskQueue());
   DECODER_LOG("VisibilityChanged: mIsVisible=%d, "
-              "mVideoDecodeSuspended=%d, mIsReaderSuspended=%d",
-              mIsVisible.Ref(), mVideoDecodeSuspended, mIsReaderSuspended.Ref());
+              "mVideoDecodeSuspended=%c, mIsReaderSuspended=%d",
+              mIsVisible.Ref(), mVideoDecodeSuspended ? 'T' : 'F', mIsReaderSuspended.Ref());
 
   if (!HasVideo()) {
     return;
@@ -1358,6 +1358,7 @@ void MediaDecoderStateMachine::VisibilityChanged()
 
   if (mVideoDecodeSuspended) {
     mVideoDecodeSuspended = false;
+    mOnPlaybackEvent.Notify(MediaEventType::ExitVideoSuspend);
     mReader->SetVideoBlankDecode(false);
 
     if (mIsReaderSuspended) {
@@ -2931,6 +2932,7 @@ MediaDecoderStateMachine::OnSuspendTimerResolved()
   DECODER_LOG("OnSuspendTimerResolved");
   mVideoDecodeSuspendTimer.CompleteRequest();
   mVideoDecodeSuspended = true;
+  mOnPlaybackEvent.Notify(MediaEventType::EnterVideoSuspend);
   mReader->SetVideoBlankDecode(true);
 }
 
